# mcp-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.quickstart.yml  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: binary-release.yml  ci.yml  docker-release.yml  release.yml  security.yml  ui-docker-release.yml
crates/adapter/: Cargo.toml  README.md
crates/gateway/: Cargo.toml
crates/gateway-cli/: Cargo.toml
crates/http-tools/: Cargo.toml
crates/openapi-tools/: Cargo.toml
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/tool-transforms/: Cargo.toml
crates/tool-transforms/src/: lib.rs
docs/: CICD.md  INDEX.md  WORKSPACE.md
docs/adapter/: ARCHITECTURE.md  CONFIG.md  INDEX.md  OPENAPI_ADAPTER_SPEC.md  TESTING.md
docs/gateway/: ARCHITECTURE.md  DATA_PLANE_AUTH.md  INDEX.md  MCP_PROXYING.md  MCP_SETTINGS.md  MODE3_TENANT_OVERLAY.md  OUTBOUND_HTTP_SAFETY.md
docs/gateway-cli/: COMMANDS.md  CONFIG.md  INDEX.md  MCP_JSON.md
docs/ui/: INDEX.md
tests/fixtures/: adapter-invalid-restart-backoff.yaml  http-tools-auth-missing-env.yaml  http-tools-httpbin-host.yaml  http-tools-httpbin.yaml  http-tools-invalid-method.yaml  minimal-no-servers.yaml  openapi-mini-spec.yaml  openapi-petstore-host.yaml  (+6 more)
ui/: .dockerignore  Dockerfile  README.md  env.example  package-lock.json  package.json  proxy.ts
(+158 files in other folders)
