[package]
name = "unrelated-tool-transforms"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared tool surface transforms (renames/defaults) for Unrelated MCP (adapter + gateway)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
